--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Benigno Suangco
 #logo: "profile image"
 #description: text below image
 #show_downloads: true
-theme: jekyll-theme-minima
+theme: jekyll-theme-modernist
