--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Benigno Suangco
-logo: 
+logo: "assets/img/CAPTURE.png"
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-modernist
