--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Benigno Suangco
 logo: "assets/img/CAPTURE.png"
 #description: text below image
 #show_downloads: true
-theme: jekyll-theme-modernist
+theme: jekyll-theme-minimal
