--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Benigno Suangco
-logo: "assets/img/Capture.png"
+logo: "assets/img/Capture.PNG"
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
