--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Benigno Suangco
-logo: "assets/img/Capture.PNG"
 description: with over 4 year experience in Media Buying
+logo: "/assets/img/Capture.PNG"
 show_downloads: true
 theme: jekyll-theme-minimal
