--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Benigno Suangco
 description: with over 4 year experience in Media Buying
 logo: "/assets/img/Capture.PNG"
 show_downloads: true
-theme: jekyll-theme-minimal
+theme: jekyll-theme-unity-ui
