--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Benigno Suangco
 description: with over 4 year experience in Media Buying
-logo: "/assets/img/Capture.PNG"
-show_downloads: true
+logo: "/assets/img/322958225_3031477280490051_1479206119155445074_n_1.jpg"
+show_downloads: false
 theme: jekyll-theme-slate
